# furstenberg-prime-infinitude-gaia

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml
.gaia/: compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
src/furstenberg_prime_infinitude/: closure.py  motivation.py
src/furstenberg_prime_infinitude/reviews/: self_review.py
src/prime_topo/: __init__.py  density.py
