[project]
name = "prime-topo-gaia"
version = "0.1.0"
description = "Topological proof of infinitude of primes via Furstenberg topology (arXiv:2402.03356)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.gaia]
type = "knowledge-package"
uuid = "fee63979-86c2-4397-b32e-a60f38a3aacb"
