[project]
name = "furstenberg-prime-infinitude-gaia"
version = "0.1.0"
description = "Topological proof of infinitude of primes via Furstenberg topology (arXiv:2402.03356)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["furstenberg_prime_infinitude*"]

[tool.gaia]
namespace = "github"
type = "knowledge-package"
uuid = "fee63979-86c2-4397-b32e-a60f38a3aacb"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
